Update markup to apply opacity
Just one approach but I don't think you can apply opacity to the body tag.

--- a/index.html
+++ b/index.html
@@ -10,47 +10,50 @@
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap" rel="stylesheet">   
 </head>
 <body>
-    <header>
-        <nav>
-            <div class="top">
-                <a href="index.html">home</a>
-                <a href="about.html">about</a>
-            </div>
-        </nav>
-    </header>
-    <main>
-        <section class="home-introduction">
-            <div>
-                <h1>Connie Lynn Tang</h1>
-                <p>
-                    Communaute . something . something
-                </p>
-            </div>
-        </section>
-        <section class="home-icons">
-            <div>
-                <ul>
-                    <li><a target="_blank" href="www.linkedin.com/in/connielynnt" class="link-icon">
-                        <img src="img/icons/linkedin.png" alt="logo linkedin" />
-                    </a></li>
-                    <li><a target="_blank" href="" class="link-icon">
-                    <img src="img/icons/instagram.png" alt="logo instagram" />
-                    </a></li>
-                    <li><a target="_blank" href="" class="link-icon">
-                    <img src="img/icons/github.png" alt="logo github" />
-                    </a></li> 
-                </ul>
-            </div>
-        </section>
-        <div>
-            <a href="index.html" class="link-biglogo">
-                <img src="img/logo connie white.svg" alt="logo connie" />
-            </a>
-        </div>
-    </main>
-    <footer>
+    <div class="container">
 
-    </footer>
+        <header>
+            <nav>
+                <div class="top">
+                    <a href="index.html">home</a>
+                    <a href="about.html">about</a>
+                </div>
+            </nav>
+        </header>
+        <main>
+            <section class="home-introduction">
+                <div>
+                    <h1>Connie Lynn Tang</h1>
+                    <p>
+                        Communaute . something . something
+                    </p>
+                </div>
+            </section>
+            <section class="home-icons">
+                <div>
+                    <ul>
+                        <li><a target="_blank" href="www.linkedin.com/in/connielynnt" class="link-icon">
+                            <img src="img/icons/linkedin.png" alt="logo linkedin" />
+                        </a></li>
+                        <li><a target="_blank" href="" class="link-icon">
+                        <img src="img/icons/instagram.png" alt="logo instagram" />
+                        </a></li>
+                        <li><a target="_blank" href="" class="link-icon">
+                        <img src="img/icons/github.png" alt="logo github" />
+                        </a></li> 
+                    </ul>
+                </div>
+            </section>
+            <div>
+                <a href="index.html" class="link-biglogo">
+                    <img src="img/logo connie white.svg" alt="logo connie" />
+                </a>
+            </div>
+        </main>
+        <footer>
+    
+        </footer>
+    </div>
 </body>
 
 </html>
